Depends upon db

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require": {
         "model/config": "^0.7.0",
-        "model/cache": "^0.5.1"
+        "model/cache": "^0.5.1",
+        "model/db": "^0.7.0"
     }
 }
