--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     },
     "require": {
         "model/config": "^0.7.0",
-        "model/cache": "^0.5.1",
-        "model/db": "^0.7.0"
+        "model/cache": "^0.5.1"
+    },
+    "suggest": {
+        "model/db": "In case you want to use db as storage",
+        "model/redis": "In case you want to use redis as storage"
     }
 }
